
message BaseData {
    optional int32 code = 1; 
    extensions 100 to 9999;  
}  
//--------------------------------------------RQ RS消息定义分割线----------------------------------------
//开始游戏
message RQ_StartGame {  
	required int32 serverId = 1;	//选择服务器的编号
    required string token = 2;		//从用户中心登陆获得的token
    extend BaseData {  
        optional RQ_StartGame ext = 101;
    } 
}
message RS_StartGame {  
	required int32 ret = 1;			//0:成功 -1:失败
    optional int32 state = 2;  		//0:未创建角色  1:已创建角色 2:禁止登陆
    extend BaseData {
        optional RS_StartGame ext = 102;  
    }
} 

//-------------------------------------------A消息定义分割线-------------------------------------------------

//推送错误消息
message A_ErrorMessage {
	required string msg = 1;	//消息内容
	extend BaseData {
        optional A_ErrorMessage ext = 2001;  
    }
}

//-------------------------------------------Q消息定义分割线-------------------------------------------------

message Q_HG_RefreshTili {
	extend BaseData {
        optional Q_HG_RefreshTili ext = 1003;  
    }
}

message A_HG_Tili {
	required int32 tili = 1;			//当前体力
	required int32 nextRecovSec = 2;	//下次恢复的剩余秒数 -1:已满，不会恢复
	extend BaseData {
        optional A_HG_Tili ext = 2047;  
    }
} 